@@ -14,7 +14,7 @@ plugins {
     id "idea"
     id "eclipse"
     id "jacoco"
-    id "org.springframework.boot"
+    id "org.springframework.boot" version "${springBootVersion}"
     id "com.google.cloud.tools.jib"
     id "com.gorylenko.gradle-git-properties"
     id "org.openapi.generator"
@@ -24,7 +24,7 @@ plugins {
     id "com.github.spotbugs"
     id "com.github.andygoossens.gradle-modernizer-plugin"
     id "org.liquibase.gradle"
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'io.spring.dependency-management' version "${springDependencyManagement}"
     id 'war'
     //jhipster-needle-gradle-plugins - JHipster will add additional gradle plugins here
 }
@@ -37,11 +37,11 @@ dependencyManagement {
 group = "com.icthh.xm.ms.mstemplate"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 }
 
-assert System.properties["java.specification.version"] == "21"
+assert System.properties["java.specification.version"] == "25"
 
 apply from: "gradle/docker.gradle"
 apply from: "gradle/sonar.gradle"
@@ -109,10 +109,13 @@ test {
     include '**/*UnitTest*'
     include '**/*IntTest*'
 
-    // to run all test that was not categorized
-    useJUnit {
-        excludeCategories(testCategories)
-    }
+    useJUnitPlatform()
+
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
 
     // uncomment if the tests reports are not generated
     // see https://github.com/jhipster/generator-jhipster/pull/2771 and https://github.com/jhipster/generator-jhipster/pull/4484
@@ -126,16 +129,27 @@ test {
 
 }
 
-task runCategorizedTests(type: Test) {
+tasks.register('runCategorizedTests', Test) {
     useJUnitPlatform {
         includeTags(testCategories)
     }
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
     testLogging testLoggingConf
 }
 
-task testReport(type: TestReport) {
-    destinationDirectory = file("$buildDir/reports/tests")
+tasks.register('testReport', TestReport) {
+    destinationDirectory = file("${layout.buildDirectory.get()}/reports/tests")
     testResults.from(test)
+}
+
+tasks.register('preCompileLep', JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'com.icthh.xm.commons.lep.groovy.LepCompiler'
+    args = findProperty('exportArgs')?.split(' ')?.toList() ?: []
 }
 
 if (!project.hasProperty("runList")) {
@@ -168,8 +182,6 @@ nohttp {
 }
 
 configurations {
-    providedRuntime
-    implementation.exclude module: "spring-boot-starter-tomcat"
     all {
         resolutionStrategy {
             // Inherited version from Spring Boot can't be used because of regressions:
@@ -193,13 +205,11 @@ dependencies {
     compileOnly "org.projectlombok:lombok:${lombok_version}"
     annotationProcessor "org.projectlombok:lombok:${lombok_version}"
 
-    implementation platform("tech.jhipster:jhipster-dependencies:${jhipsterDependenciesVersion}")
-    implementation group: "tech.jhipster", name: "jhipster-framework"
+    implementation "tech.jhipster:jhipster-framework:${jhipsterFrameworkDependenciesVersion}"
 
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate6"
-    implementation "com.fasterxml.jackson.core:jackson-annotations"
-    implementation "com.fasterxml.jackson.core:jackson-databind"
+    implementation "tools.jackson.core:jackson-annotations"
+    implementation "tools.jackson.core:jackson-databind"
+    implementation "tools.jackson.datatype:jackson-datatype-hibernate7"
     implementation "org.hibernate.orm:hibernate-core:${hibernateVersion}"
     implementation "com.zaxxer:HikariCP"
     implementation "org.apache.commons:commons-lang3"
@@ -213,9 +223,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
     implementation "org.springframework.boot:spring-boot-starter-security"
-    implementation ("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
-    }
+    implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-undertow"
 
     implementation "org.springframework.cloud:spring-cloud-starter"
@@ -267,6 +275,8 @@ dependencies {
     testImplementation "com.tngtech.archunit:archunit-junit5-api:${archunitJunit5Version}"
     testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:${archunitJunit5Version}"
     testImplementation "com.h2database:h2"
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
 
@@ -274,36 +284,15 @@ dependencies {
     constraints {
         implementation("org.apache.commons:commons-compress:${apacheCommonCompress}")
         implementation("io.github.classgraph:classgraph:${gitClassGraph}")
-
-        implementation("io.undertow:undertow-core") {
-            version {
-                strictly("${undertowVersion}")
-            }
-        }
-        implementation("io.undertow:undertow-servlet") {
-            version {
-                strictly("${undertowVersion}")
-            }
-        }
-        implementation("io.undertow:undertow-websockets-jsr") {
-            version {
-                strictly("${undertowVersion}")
-            }
-        }
-        implementation("org.jboss.xnio:xnio-api") {
-            version {
-                strictly("${xnioApiVersion}")
-            }
-        }
     }
 }
 
-task cleanResources(type: Delete) {
+tasks.register('cleanResources', Delete) {
     delete "build/resources"
 }
 
 wrapper {
-    gradleVersion = "8.9"
+    gradleVersion = "9.2.1"
 }
 
 compileJava {
